2005-12-03  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version number for X11R7 RC3 release.

2005-11-09  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version number for X11R7 RC2 release.

2005-11-01  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update pkgcheck depedencies to work with separate build roots.

2005-10-18  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version number for RC1 release.

2005-10-05  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* Makefile.am: Install AtomControl config file

2005-09-28  Kristian Høgsberg  <krh@redhat.com>

	* Makefile.am (EXTRA_DIST): add design and lbxproxy.def.

	* README: Copy first two paragraphs from man page.