@@ -78,7 +78,7 @@ lbxproxy_SOURCES = \
 	include/util.h		\
 	include/wire.h
 
-appman_SOURCES = \
+appman_PRE = \
         lbxproxy.man
 
 configdir = $(libdir)/X11/lbxproxy
@@ -90,9 +90,9 @@ EXTRA_DIST = \
 
 appmandir = $(APP_MAN_DIR)
 
-appman_DATA = $(appman_SOURCES:man=@APP_MAN_SUFFIX@)
+appman_DATA = $(appman_PRE:man=@APP_MAN_SUFFIX@)
 
-EXTRA_DIST += $(appman_SOURCES)
+EXTRA_DIST += $(appman_PRE)
 CLEANFILES = $(appman_DATA)
 
 SED = sed
